Add editors support for third party servers